# g2

./: Cargo.toml  README.md
bash/: g2  g2-branch  g2-clean  g2-commit  g2-diff  g2-files  g2-new  g2-revert  g2-snapshot  g2-sync  g2-upload  sel
src/: .cmd.rs.swp  actions.rs  branch_fs.rs  cmd.rs  conf.rs  fail.rs  fs.rs  main.rs  root_fs.rs  tui.rs
