[package]
name = "g2"
version = "0.1.0"
authors = ["Colin Merkel <colin.merkel@tophatmonocle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
toml = "0.5.8"
serde = {version = "1", features= ["derive"] }
dialoguer = "0.8.0"
