[package]
name = "g2"
version = "0.2.0"
authors = ["Colin Merkel <colin.merkel@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/colin353/g2"
documentation = "https://github.com/colin353/g2"
repository = "https://github.com/colin353/g2"
readme = "README.md"
description = "An alternative terminal interface for git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
toml = "0.5.8"
serde = {version = "1", features= ["derive"] }
dialoguer = "0.8.0"
